--- a/client/board.html
+++ b/client/board.html
@@ -315,6 +315,9 @@
       <a href="/" class="logo">
         <span class="logo-text">💬 Message Board</span>
       </a>
+      <ul class="nav-menu" id="nav-menu">
+        <li><a href="/?home">Home</a></li>
+      </ul>
     </nav>
   </header>
 
