--- a/client/board.html
+++ b/client/board.html
@@ -390,6 +390,45 @@
       padding: var(--spacer3);
       color: var(--text-color-quiet);
     }
+
+    /* Sidebar access box */
+    #sidebar-access-box {
+      background: var(--bg-color);
+      border: 1px solid var(--page-border);
+      border-radius: 8px;
+      padding: var(--spacer2);
+      margin-bottom: var(--spacer2);
+    }
+
+    #sidebar-access-box h4 {
+      margin: 0 0 var(--spacerhalf) 0;
+      font-size: 14px;
+      color: var(--text-color);
+    }
+
+    #sidebar-access-box p {
+      margin: 0 0 var(--spacer) 0;
+      font-size: 13px;
+      color: var(--text-color-quiet);
+      line-height: 1.4;
+    }
+
+    #sidebar-access-box button {
+      width: 100%;
+      padding: 8px 12px;
+      font-size: 13px;
+      background: var(--action-color);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 500;
+      transition: all 0.2s;
+    }
+
+    #sidebar-access-box button:hover {
+      background: var(--action-color-hilite);
+    }
   </style>
   <script src="/script/common.js"></script>
 </head>
@@ -427,6 +466,8 @@
     </div>
 
     <div class="board-sidebar">
+      <div id="sidebar-access-box"></div>
+
       <div class="sidebar-title">Links</div>
       <ul class="sidebar-links" id="sidebar-links">
         <!-- Links will be loaded here -->
@@ -442,7 +483,7 @@
     </div>
   </footer>
 
-  <script src="/agent/epistery/message-board/static/app.js"></script>
+  <script src="/agent/epistery/message-board/client/app.js"></script>
   <script>
     // Load sidebar links
     async function loadSidebarLinks() {
