--- a/client/board.html
+++ b/client/board.html
@@ -483,7 +483,7 @@
     </div>
   </footer>
 
-  <script src="/agent/epistery/message-board/client/app.js"></script>
+  <script type="module" src="/agent/epistery/message-board/client/app.js"></script>
   <script>
     // Load sidebar links
     async function loadSidebarLinks() {
