--- a/client/board.html
+++ b/client/board.html
@@ -493,7 +493,7 @@
     </div>
 
     <div class="console-sidebar">
-      <div class="request-access-widget" data-widget="requestAccess" data-agent="@epistery/message-board" data-list="message-board::poster"></div>
+      <div class="request-access-widget" data-widget="requestAccess" data-agent="@epistery/message-board" data-list="epistery::editor"></div>
 
       <div class="sidebar-title">Links</div>
       <ul class="sidebar-links" id="sidebar-links">
